# medic-agent

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_2026-01-28.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION_REPORT.md  README.md  REBOOT_PLAN.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES.md  SECURITY_LOW_PRIORITY_FIXES.md  SECURITY_MEDIUM_PRIORITY_FIXES.md  SECURITY_STATUS.md  api.py  claude.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
config/: constitution.yaml  medic.production.yaml  medic.yaml
core/: __init__.py  decision.py  errors.py  event_bus.py  listener.py  log_decisions.py  logger.py  metrics.py  models.py  reporting.py  resurrector.py  risk.py  siem.py  siem_interface.py  validation.py
deploy/grafana/provisioning/datasources/: prometheus.yaml
deploy/prometheus/: prometheus.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  SPEC_SHEET.md
execution/: __init__.py  auto_resurrect.py  monitor.py  recommendation.py  resurrector.py
integration/: __init__.py  cluster_manager.py  edge_case_manager.py  self_monitor.py  smith_negotiator.py  veto_protocol.py
interfaces/: __init__.py  approval_queue.py  auth.py  cli.py  dashboard.py  web.py
kubernetes/: configmap.yaml  deployment.yaml  external-secret.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
kubernetes/overlays/development/: kustomization.yaml
kubernetes/overlays/production/: external-secret.yaml  kustomization.yaml
learning/: __init__.py  feedback.py  outcome_store.py  pattern_analyzer.py  threshold_adapter.py
tests/: __init__.py  conftest.py  test_api.py  test_end_to_end.py  test_outcome_store.py  test_risk_scoring.py
tests/fixtures/: __init__.py  kill_reports.py  siem_responses.py
tests/integration/: __init__.py  test_web_interface.py  test_workflow.py
tests/performance/: __init__.py  test_load.py
tests/security/: __init__.py  test_api_security.py  test_input_validation.py
tests/unit/: __init__.py
tests/unit/core/: test_decision.py  test_edge_cases.py  test_logger.py  test_models.py  test_risk.py
tests/unit/execution/: __init__.py  test_resurrector.py
tests/unit/integration/: __init__.py  test_cluster_manager.py  test_edge_case_manager.py  test_self_monitor.py  test_smith_negotiator.py  test_veto_protocol.py
tests/unit/interfaces/: __init__.py  test_approval_queue.py  test_websocket.py
tests/unit/learning/: test_feedback.py  test_outcome_store.py  test_pattern_analyzer.py  test_threshold_adapter.py
