[project]
name = "medic-agent"
version = "0.2.0-alpha"
description = "Autonomous resilience layer for AI agent kill event evaluation and resurrection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kase Branham"}
]

dependencies = [
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/kase1111-hash/medic-agent.git"
Issues = "https://github.com/kase1111-hash/medic-agent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "execution*", "learning*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "B", "UP"]
exclude = [".venv", "venv", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
